--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
   "version": "0.0.1-alpha",
   "private": true,
   "dependencies": {
+    "node-sass-chokidar": "^1.2.2",
+    "npm-run-all": "^4.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "vanilla-framework": "^1.7.0-alpha-1",
+    "vanilla-framework-react": "^0.1.3"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "npm-run-all -p watch-css start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css":
+      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o public/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o public/ --watch --recursive"
   },
   "description":
     "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-plugin-react": "^7.7.0"
+  },
   "repository": {
     "type": "git",
     "url":
