--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1-alpha",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "^1.2.2",
-    "npm-run-all": "^4.1.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "node-sass-chokidar": "^1.3.0",
+    "npm-run-all": "^4.1.3",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "vanilla-framework": "^1.7.0-alpha-1",
+    "vanilla-framework": "^1.7.1",
     "vanilla-framework-react": "^0.1.3"
   },
   "scripts": {
@@ -24,9 +24,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
   "devDependencies": {
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.2",
     "prop-types": "^15.6.1",
-    "styled-components": "^3.2.5"
+    "styled-components": "^3.3.0"
   },
   "repository": {
     "type": "git",
